# EventConnectorLib

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  modules.rst
src/event_connector_lib/: client.py  utils.py
