[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "event_connector_lib"
version = "0.0.1"
authors = [
  { name="Falk Seidl", email="falk.seidl@iosb-ast.fraunhofer.de" },
]
description = "The ZKMS client library."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://git.waldwaechter.de/5G-Waldwaechter/EventConnectorLib"
Issues = "https://git.waldwaechter.de/5G-Waldwaechter/EventConnectorLib/issues"